--- a/carbon_footprint_tracker/android/app/build.gradle
+++ b/carbon_footprint_tracker/android/app/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.example.catalogue_animation"
+    namespace "com.example.carbon_footprint_tracker"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -58,7 +58,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.catalogue_animation"
+        applicationId "com.example.carbon_footprint_tracker"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
